# LaboratoriaCPP

lab01/include/: MyLibrary.h
lab02/: Main.cpp
lab02/include/: GOperations.h  GSeries.h
lab02/src/: Functions.cpp
lab03/: CMakeLists.txt  Main.cpp
lab03/include/: GOperations.h  GSeries.h
lab03/src/: Functions.cpp
lab04/: CMakeLists.txt  Main.cpp
lab04/include/: GOperations.h  GSeries.h
lab04/src/: Functions.cpp
lab05/include/: Angle.h
lab05/src/: Angle.cpp
lab06/: Main.cpp
lab06/include/: Angle.h
lab06/src/: Angle.cpp
lab07/: Main.cpp
lab07/include/: PointCloud.h
lab07/src/: PointCloud.cpp
lab08/: Main.cpp
lab08/include/: Point3D.h  PointCloud.h
lab08/src/: Point3D.cpp  PointCloud.cpp
lab09/: Main.cpp
lab09/include/: CplxNumber.h  CplxVector.h
lab09/src/: CplxNumber.cpp  CplxVector.cpp
lab10/: Main.cpp
lab10/include/: Car.h
lab10/src/: Car.cpp
lab11/: Main.cpp
lab11/include/: Line.h
lab11/src/: Line.cpp
lab12/: Main.cpp
lab12/include/: LArray.h  LPrint.h  Lin.h  Line.h
lab12/src/: LArray.cpp  LPrint.cpp  Lin.cpp  Line.cpp
lab13/: Main.cpp
lab13/include/: Kolo.h  Ksztalt.h  Trojkat.h
lab13/src/: Kolo.cpp  Ksztalt.cpp  Trojkat.cpp
lab14/: Main.cpp
lab14/include/: Obszar.h  Zwierze.h
